--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "preinstall": "npm i protractor -g",
+    "preinstall": "npm i protractor -g && webdriver-manager update",
     "test": "protractor conf.js"
   },
   "author": "",
